--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -1043,11 +1043,146 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "mv<-(8*mp+8*mn+8*me-15.9949146*u)\n",
+        "cat(sprintf\n",
+        "      (\"a) Hapen massavaje on %.6f u.\\n\",mv/u)) \n",
+        "A=197\n",
+        "Z=79\n",
+        "mv<-(Z*mp+(A-Z)*mn+Z*me-196.966543*u)\n",
+        "E=mv*c^2\n",
+        "cat(sprintf\n",
+        "      (\"b) Kultaytimen sidosenergia on %.2f MeV.\\n\",E/1e6/eV)) \n",
+        "A=243\n",
+        "Z=95\n",
+        "mv<-(Z*mp+(A-Z)*mn+Z*me-243.061375*u)\n",
+        "E=mv*c^2\n",
+        "cat(sprintf\n",
+        "      (\"c) Amerikiumytimen sidososuus on %.5f MeV.\\n\",E/1e6/eV/A)) \n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) Hapen massavaje on 0.137003 u.\n",
+            "b) Kultaytimen sidosenergia on 1559.39 MeV.\n",
+            "c) Amerikiumytimen sidososuus on 7.53008 MeV.\n"
+          ]
+        }
+      ],
+      "execution_count": 118,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-08T20:12:55.449Z",
+          "iopub.execute_input": "2021-12-08T20:12:55.476Z",
+          "shell.execute_reply": "2021-12-08T20:12:55.595Z",
+          "iopub.status.idle": "2021-12-08T20:12:55.554Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
+        "31\n",
         "\n",
+        "Kirjan vastaus: c) 1.222 pm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# E=hc/l\n",
+        "E<-1.015e6*eV\n",
+        "l<-h*c/E\n",
+        "cat(sprintf(\"Lyhin aallonpituus on %.3f pm.\\n\",l/1e-12))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lyhin aallonpituus on 1.222 pm.\n"
+          ]
+        }
+      ],
+      "execution_count": 115,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-08T20:04:25.413Z",
+          "iopub.execute_input": "2021-12-08T20:04:25.440Z",
+          "iopub.status.idle": "2021-12-08T20:04:25.498Z",
+          "shell.execute_reply": "2021-12-08T20:04:25.521Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "34 \n",
         "\n",
-        "Kirjan vastaus:"
+        "Kirjan vastaus: a) 4.771 MeV b) 3.961 MeV c) 1.900 MeV d) 1.674 MeV"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "35\n",
+        "\n",
+        "Kirjan vastaus: 0.7824 MeV"
       ],
       "metadata": {
         "nteract": {
@@ -1059,7 +1194,296 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "36\n",
+        "\n",
+        "Kirjan vastaus: b) 1.9e20 Hz, 1.5e-12m"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "37\n",
+        "\n",
+        "Kirjan vastaus: 1.853 MeV"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "38 \n",
+        "\n",
+        "Kirjan vastaus: 45 W"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "39\n",
+        "\n",
+        "Kirjan vastaus: c) 1.564e-18 1/s"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "40\n",
+        "\n",
+        "Kirjan vastaus: b) 40 kBq c) 2.9 g"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "41\n",
+        "\n",
+        "Kirjan vastaus: b) 2.4 min"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "42\n",
+        "\n",
+        "Kirjan vastaus: 5.6 l"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "43\n",
+        "\n",
+        "Kirjan vastaus: b) 2800 a"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "44\n",
+        "\n",
+        "Kirjan vastaus: a ja c"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "45\n",
+        "\n",
+        "Kirjan vastaus: a) 3.4e14 J b) 4000 kg"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "46\n",
+        "\n",
+        "Kirjan vastaus: b) 49 000 kWh"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "47\n",
+        "\n",
+        "Kirjan vastaus: a) 1/8 b) 2.5 m"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "48\n",
+        "\n",
+        "Kirjan vastaus: 5.2 cm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "49\n",
+        "\n",
+        "Kirjan vastaus: a) 3 b) 6.4 % c) 120 1/m"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "54\n",
+        "\n",
+        "Kirjan vastaus: b) 9.5e21 km"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "K2005/14 \n",
+        "\n",
+        "Kirjan vastaus: b) alle 560 nm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "S2012/9\n",
+        "\n",
+        "Kirjan vastaus: 3.7 kBq"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "S2007/9\n",
+        "\n",
+        "Kirjan vastaus: b) 4800 a"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "K2016/9\n",
+        "\n",
+        "Kirjan vastaus: b) 330 MBq"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "S2005/9\n",
+        "\n",
+        "Kirjan vastaus: a) 21 kV b) kuparia"
+      ],
       "metadata": {
         "nteract": {
           "transient": {
