--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -1161,9 +1161,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
+      "source": [
+        "# Thorium 230/90  -> Radium 226/88 + alfa + 2e\n",
+        "mv<-(230.0331278*u-226.025402*u-ma-2*me)\n",
+        "cat(sprintf\n",
+        "      (\"a) massavaje on %.4f u ja energia %.3f MeV.\\n\",\n",
+        "       mv/u,mv*c^2/eV/1e6)) \n",
+        "# Hopea 112/47 -> kadmium 112/48 (e kadmiumiin)\n",
+        "mv<-(111.90701*u-111.902758*u)\n",
+        "cat(sprintf\n",
+        "      (\"b) massavaje on %.4f u ja energia %.3f MeV.\\n\",\n",
+        "       mv/u,mv*c^2/eV/1e6))\n",
+        "# Gallium 68/31 -> sinkki 68/30 + e+ \n",
+        "mv<-(67.92801*u-67.924846*u-2*me)\n",
+        "cat(sprintf\n",
+        "      (\"c) massavaje on %.4f u ja energia %.3f MeV.\\n\",\n",
+        "       mv/u,mv*c^2/eV/1e6))\n",
+        "# Kupari 64/29 +e ->  nikkeli 64/28 \n",
+        "mv<-(63.929765*u-63.927968*u)\n",
+        "cat(sprintf\n",
+        "      (\"d) massavaje on %.4f u ja energia %.3f MeV.\\n\",\n",
+        "       mv/u,mv*c^2/eV/1e6))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) massavaje on 0.0051 u ja energia 4.772 MeV.\n",
+            "b) massavaje on 0.0043 u ja energia 3.961 MeV.\n",
+            "c) massavaje on 0.0021 u ja energia 1.925 MeV.\n",
+            "d) massavaje on 0.0018 u ja energia 1.674 MeV.\n"
+          ]
+        }
+      ],
+      "execution_count": 136,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1174,6 +1206,12 @@
           "transient": {
             "deleting": false
           }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-12T19:33:50.018Z",
+          "iopub.execute_input": "2021-12-12T19:33:50.045Z",
+          "iopub.status.idle": "2021-12-12T19:33:50.136Z",
+          "shell.execute_reply": "2021-12-12T19:33:50.179Z"
         }
       }
     },
@@ -1193,6 +1231,43 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "mv<-(mn-(mp+me))\n",
+        "cat(sprintf\n",
+        "      (\"massavaje on %.6f u ja energia %.4f MeV.\\n\",\n",
+        "       mv/u,mv*c^2/eV/1e6)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "massavaje on 0.000840 u ja energia 0.7824 MeV.\n"
+          ]
+        }
+      ],
+      "execution_count": 140,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-12T19:39:27.170Z",
+          "iopub.execute_input": "2021-12-12T19:39:27.196Z",
+          "iopub.status.idle": "2021-12-12T19:39:27.246Z",
+          "shell.execute_reply": "2021-12-12T19:39:27.271Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "36\n",
@@ -1204,6 +1279,46 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#E=h*f\n",
+        "E=0.8e6*eV\n",
+        "f=E/h\n",
+        "l=c/f\n",
+        "cat(sprintf\n",
+        "      (\"Taajuus on %.1e Hz ja aallonpituus %.1e m.\\n\",\n",
+        "       f,l)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Taajuus on 1.9e+20 Hz ja aallonpituus 1.5e-12 m.\n"
+          ]
+        }
+      ],
+      "execution_count": 141,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-12T19:49:09.428Z",
+          "iopub.execute_input": "2021-12-12T19:49:09.455Z",
+          "iopub.status.idle": "2021-12-12T19:49:09.510Z",
+          "shell.execute_reply": "2021-12-12T19:49:09.541Z"
         }
       }
     },
@@ -1223,6 +1338,57 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Nd 144/60 -> Ce 140/58 + a\n",
+        "mc=139.905433*u\n",
+        "ma=4.0026033*u\n",
+        "mv<-(143.910083*u-mc-ma)\n",
+        "E=mv*c^2\n",
+        "cat(sprintf\n",
+        "      (\"Massavaje on %.6f u ja vapautuva energia %.3f MeV.\\n\",\n",
+        "       mv/u,E/eV/1e6))\n",
+        "# Liikemäärä säilyy\n",
+        "#vc=ma/mc*va\n",
+        "#E=0.5*ma*va^2+0.5*mc*vc^2\n",
+        "#E=0.5*ma*va^2+0.5*mc*ma^2/mc^2*va^2\n",
+        "va=sqrt(2*E/(ma+ma^2/mc))\n",
+        "Ea=0.5*ma*va^2\n",
+        "cat(sprintf\n",
+        "      (\"Alfa-hiukkasen nopeus on %.3f c ja energia %.3f MeV.\\n\",\n",
+        "       va/c,Ea/eV/1e6))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Massavaje on 0.002047 u ja vapautuva energia 1.906 MeV.\n",
+            "Alfa-hiukkasen nopeus on 0.032 c ja energia 1.853 MeV.\n"
+          ]
+        }
+      ],
+      "execution_count": 153,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-12T20:18:05.176Z",
+          "iopub.execute_input": "2021-12-12T20:18:05.206Z",
+          "iopub.status.idle": "2021-12-12T20:18:05.270Z",
+          "shell.execute_reply": "2021-12-12T20:18:05.334Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "38 \n",
@@ -1234,6 +1400,51 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plutonium 238 jälkilämpö on 560 W/kg (Wikipedia)\n",
+        "n=0.08\n",
+        "cat(sprintf(\"Sähköteho on %.0f W.\\n\",n*560))\n",
+        "# Annettujen tietojen perusteella\n",
+        "m=1#kg\n",
+        "m238=238.05*u\n",
+        "N=m/m238\n",
+        "E=N*5.5e6*eV\n",
+        "t=87.7*365.25*24*3600\n",
+        "P=E/t\n",
+        "cat(sprintf(\"Sähköteho on %.0f W.\\n\",n*P))\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sähköteho on 45 W.\n",
+            "Sähköteho on 64 W.\n"
+          ]
+        }
+      ],
+      "execution_count": 158,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-12T20:35:58.265Z",
+          "iopub.execute_input": "2021-12-12T20:35:58.299Z",
+          "iopub.status.idle": "2021-12-12T20:35:58.378Z",
+          "shell.execute_reply": "2021-12-12T20:35:58.426Z"
         }
       }
     },
