fy7 kertaus 34-37 tallennettuna uudestaan

--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -1408,27 +1408,30 @@
       "source": [
         "# Plutonium 238 jälkilämpö on 560 W/kg (Wikipedia)\n",
         "n=0.08\n",
-        "cat(sprintf(\"Sähköteho on %.0f W.\\n\",n*560))\n",
+        "cat(sprintf(\"Sähköteho on jälkilämmön perusteella %.0f W.\\n\",n*560))\n",
         "# Annettujen tietojen perusteella\n",
         "m=1#kg\n",
         "m238=238.05*u\n",
+        "#T12=log(2)/l\n",
+        "T12=87.7*365.25*24*3600#s\n",
+        "l=log(2)/T12\n",
         "N=m/m238\n",
-        "E=N*5.5e6*eV\n",
-        "t=87.7*365.25*24*3600\n",
-        "P=E/t\n",
-        "cat(sprintf(\"Sähköteho on %.0f W.\\n\",n*P))\n"
+        "P=l*N*5.5e6*eV\n",
+        "cat(sprintf(\n",
+        "  \"Hajoamisvakio on %.2e 1/s, sähköteho on alussa %.0f W.\\n\",\n",
+        "            l,n*P))\n"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sähköteho on 45 W.\n",
-            "Sähköteho on 64 W.\n"
+            "Sähköteho on jälkilämmön perusteella 45 W.\n",
+            "Hajoamisvakio on 2.50e-10 1/s, sähköteho on alussa 45 W.\n"
           ]
         }
       ],
-      "execution_count": 158,
+      "execution_count": 165,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1441,10 +1444,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-12-12T20:35:58.265Z",
-          "iopub.execute_input": "2021-12-12T20:35:58.299Z",
-          "iopub.status.idle": "2021-12-12T20:35:58.378Z",
-          "shell.execute_reply": "2021-12-12T20:35:58.426Z"
+          "iopub.status.busy": "2021-12-12T20:48:17.349Z",
+          "iopub.execute_input": "2021-12-12T20:48:17.379Z",
+          "iopub.status.idle": "2021-12-12T20:48:17.457Z",
+          "shell.execute_reply": "2021-12-12T20:48:17.516Z"
         }
       }
     },
