--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -1467,6 +1467,42 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "T12=1.405e10*365.24*24*3600#s\n",
+        "l=log(2)/T12\n",
+        "cat(sprintf(\"Hajoamisvakio on %.3e 1/s.\\n\",l))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hajoamisvakio on 1.563e-18 1/s.\n"
+          ]
+        }
+      ],
+      "execution_count": 170,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-13T18:15:53.679Z",
+          "iopub.execute_input": "2021-12-13T18:15:53.709Z",
+          "iopub.status.idle": "2021-12-13T18:15:53.769Z",
+          "shell.execute_reply": "2021-12-13T18:15:53.807Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "40\n",
@@ -1478,6 +1514,51 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T12=8.02*24*3600#s\n",
+        "l=log(2)/T12\n",
+        "# A=A0*exp(-l*t)\n",
+        "A=15500\n",
+        "t=11*24*3600\n",
+        "A0=A/exp(-l*t)\n",
+        "cat(sprintf(\"b) Säteilyn voimakkuus oli %.0f kBq.\\n\",A0/1e3))\n",
+        "N=A0/l\n",
+        "mI=130.906114*u\n",
+        "m=N*mI*337000e6\n",
+        "cat(sprintf(\"c) Laskeuman massa oli %.1f g.\\n\",m*1e3))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b) Säteilyn voimakkuus oli 40 kBq.\n",
+            "c) Laskeuman massa oli 2.9 g.\n"
+          ]
+        }
+      ],
+      "execution_count": 175,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-13T18:30:28.731Z",
+          "iopub.execute_input": "2021-12-13T18:30:28.765Z",
+          "iopub.status.idle": "2021-12-13T18:30:28.836Z",
+          "shell.execute_reply": "2021-12-13T18:30:28.879Z"
         }
       }
     },
@@ -1497,6 +1578,82 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df<-data.frame(x=c(20,50,80,110,140,170,200,+\n",
+        "                   230,260,290,320,350,380,410),\n",
+        "               y=c(18001,9929,6067,4105,3158,2491,+\n",
+        "                   2065,1720,1451,1277,1135,962,846,720))\n",
+        "plot(df$x,df$y,ylim=c(0,25000),xlim=c(0,500),\n",
+        "     xlab='aika [s]',ylab='Pulssimäärä')\n",
+        "fit1 <- nls(y~a1*exp(-l1*x)+a2*exp(-l2*x),start=list(a1=23000,l1=0.027,a2=5000,l2=0.005), data=df)\n",
+        "a1<-coef(fit1)[\"a1\"]\n",
+        "l1<-coef(fit1)[\"l1\"]\n",
+        "a2<-coef(fit1)[\"a2\"]\n",
+        "l2<-coef(fit1)[\"l2\"]\n",
+        "T12_1<-log(2)/l1\n",
+        "T12_2<-log(2)/l2\n",
+        "cat(sprintf(\"l1=%.3e 1/s ja T12_1=%.0f s.\\n\",\n",
+        "            l1,T12_1))\n",
+        "cat(sprintf(\"l2=%.3e 1/s ja T12_2=%.0f s.\\n\",\n",
+        "            l2,T12_2))\n",
+        "print(fit1)\n",
+        "x_axis <- seq(0.0, 500, length=15)\n",
+        "lines(x_axis, predict(fit1, data.frame(x=x_axis)), col='green')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "l1=2.716e-02 1/s ja T12_1=26 s.\n",
+            "l2=4.725e-03 1/s ja T12_2=147 s.\n",
+            "Nonlinear regression model\n",
+            "  model: y ~ a1 * exp(-l1 * x) + a2 * exp(-l2 * x)\n",
+            "   data: df\n",
+            "       a1        l1        a2        l2 \n",
+            "2.313e+04 2.716e-02 5.021e+03 4.725e-03 \n",
+            " residual sum-of-squares: 8018\n",
+            "\n",
+            "Number of iterations to convergence: 3 \n",
+            "Achieved convergence tolerance: 2.838e-07\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": "plot without title",
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAAM1BMVEUAAAAA/wBNTU1oaGh8\nfHyMjIyampqnp6eysrK9vb3Hx8fQ0NDZ2dnh4eHp6enw8PD///8kvpEoAAAACXBIWXMAABJ0\nAAASdAHeZh94AAAZuElEQVR4nO3d2ULiShRA0TKASCPD/39tSxDFiSknVUllrYcr3Q4VafdN\nSA6Y9kBnqfQGQA2EBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGE\nBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGE\nBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGE\nBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGE\nBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGEBAGE\nBAGEBAGEBAGEBAGEBAGEBAGEBAEeD+n1ZZEOFsvXwO2BUXo0pN0sfZqHbhKMz6MhLVPzb9Pe\n2q6btIzbIBijR0Nq0ubj9iY1F5e47OnK+yG7+4N4NKQva11e+NoSTw9uAvQkY0j37JGufCkh\nMTAZQ3p7jLTetreuPkYSEiOTMaT9/OyIcrbrsoSQGJicIe1fl+11pGbxcuU6kpAYmawhhS0h\nJAZGSBAg76HdrSNCV5dQEsOSMaQ7RoSExMjkPf1964iQkBiZcV6QFRIDM84RISExMPZIEGCc\nI0JCYmDGOSIkJAZmnCNCSmJgxjnZICQGRkgQYKQjQkJiWEY6IiQkhmWkI0JCYlhGekFWSAzL\ncEaE7nxtIyUxJGPdIwmJQRnpiJCQGJaRjggJiWEZ64iQkBiUsU42CIlBERIEyB/SapbSYt15\nCSExJNmvI72fcbj865FuWUJJDEjukJZpudvvt8u06rqEkBiQ3CE1qT3vvUuzrksIiQHJHdJp\n+qfjqwjthcSg5A7p+RRS1xEhITEkWUNavKzW6d/bzd2y84iQkBiSrCF9THan1HQdERISQ5Lz\nOtJms1otFu0ph+XFjm5bQkkMx2gnG4TEkAgJAuQMafec0vx9OKj76W8hMSA5X0WoOb4W1/GL\nCImaZH2G7OqtplXTvhKXkKhK1tdsaN9sm9lWSFSmwKsI7eZzIVGZjCHN0uni0WweEZKSGI6M\nIa3S8/utbZoLiarkPP29/KhnfeU1IIXEyGS9ILtZnG5tn4VETUY82SAkhkNIEEBIEGDMISmJ\nwRASBBASBBASBBASBBASBBASBBASBBh1SEpiKIQEAYQEAYQEAYQEAYQEAYQEAcYdkpIYCCFB\nACFBACFBACFBACFBACFBACFBgJGHpCSGQUgQQEgQQEgQQEgQQEgQQEgQQEgQYOwhKYlBEBIE\nEBIEEBIEEBIEEBIEEBIEGH1ISmIIhAQBhAQBhAQBhAQBhAQBhAQBhAQBxh+SkhgAIUEAIUEA\nIUEAIUEAIUEAIUGACkJSEuUJCQIICQIICQIICQJkDen1ZZEOFsvXyCWERHEZQ9rN0qd54BJC\noriMIS1T82/T3tqum7SMW0JIFJcxpCZtPm5vUhO4hJIoLWNIKf31h65LCInS7JEgQN7HSOtt\neyv4MZKQKC7n6e/52Vm72S5wCSFRWt7rSMv2OlKzeAm9jiQkiqthskFIFFdFSEqitBpGhIRE\ncTWMCAmJ4moYERISxVVxQVZIlFbFiJCQKM0eCQJUMSIkJEqrYkRISZRWxYiQkCitjskGIVGY\nkCBAHSNCQqKwOkaEhERhdYwICYnC6rggqyQKG86IUDp39xcXEkXZI0GAOkaEhERhlYwICYmy\nKhkREhJlVTLZICTKEhIEqGRESEmUVcmIkJAoq5IRISFRVi0XZIVEUcMZEeq4hJAoyR4JAtQy\nIiQkiqplREhJFFXLiJCQKKqWyQYhUZSQIEDOkHbPKc3X718k+vS3kCgp54hQcxy0O34RIVGT\nrKe/V281rZp2zE5IVCXrBdn2zbaZbYVEZQqMCO3m8z5CUhIFZQxplk4XYWdzIVGXjCGt0vP7\nrW2aC4mq5Dz9vfyoZ33lNSCFxMhkvSC7WZxubZ+FRE3qmWwQEgUJCQJUFJKSKEdIEEBIEEBI\nEEBIEEBIEEBIEEBIEKCmkJREMUKCAEKCAEKCAEKCALWE1D5TUEiUUkdI7fNtUxISpVQS0vG/\nQqKUKkI6fbiSKEVIEEBIEKCKkE6PkZy2o5RKQjqetRMSpdQR0vt1JCFRSi0hHQmJQuoKSUkU\nIiQIICQIICQIICQIICQIICQIICQIUFlISqIMIUEAIUEAIUEAIUEAIUEAIUGA2kJSEkUICQII\nCQIICQIICQIICQIICQIICQJUF5KSKEFIEEBIEEBIEEBIEEBIEEBIEKC+kJREAUKCAEKCAEKC\nAEKCAEKCAEKCAFlDen1ZpIPF8rWvJfZCooSMIe1m6dO8lyWOlER2GUNapubfpr21XTdp2ccS\nR0Iiu4whNWnzcXuTmj6WOBIS2WUMKaW//hC2xJGQyM4eCQLkfYy03ra3PEaiNjlPf8/PztrN\ndr0s0RIS2eW9jrRsryM1i5c+ryMpifwqnGwQEvkJCQJUOCIkJPKrcURISGRX44iQkMiuxguy\nQiK7GkeEhER2Ve6RlERuNY4ICYnsahwREhLZVTkiJCRyq3KyQUjkJiQIUOWIkJDIrcoRISWR\nW5UjQkIitzovyAqJzIYzIpTOPbjEByGRlz0SBKhzREhIZFbniJCQyCwqpNfFDZ+ZbURISGTW\nNaRl2PmBP5d4iJLIqktIb/F8drQuvFXfCImsOobUpH9vD32223m6crD2aTVLaXElOyExMh0P\n7Q5HdC9ve6PNlZmf08d+nHG4eNJOSIxNQEjrtLr2GgwfH/t2LLjc7ffb5eFzQrfqGyGRVcdD\nu8Xbod02zfavt4bUpPa89+7tc2K36hshkVXHkNaHOtqjtefrn5f2n3uuXl9FaC8kMut6+vvl\n8Kfna495jp93/ND3P/Q7IiQk8so6tLp4Wa3fjgXfjuyWPY8IKYm8Ooa0uGFP9PF5n1duU2r6\nHRESEnkFnLW72WazWi0W7SmH5cWOhMTYdAxpli4X8SAhMTIdQ9ot5jePNDy4xIOERE6dD+0G\nOrQqJLISEgSo8wUiD5RERlmvI938+iZCYmQyPkN2JSSqlfMZspvm+nMtHt6qH4RERlmfIbu5\nZSTvwa36QUhklPcZsquzl7YL3qofhERGGZ8h++ASjxISGWV8huyDSzxKSGSU8Rmy/W7VT0oi\nn4zPkO13q34SEvlkfIbso0s8SkjkU++IkJDISEgQIOuL6Hdb4l5CIp9aX0R/LyRyqvVF9A+U\nRDb5X0S/p636hZDIpt4RISGRUb0jQkIio4pHhIREPhWPCAmJfCoeERIS+VQ82SAk8qk5JCWR\njZAgQOcRoWawI0JCIp+OIX2OCAmJKet8Qfbibyd/lJAYmZy/aOyxJbpQEpl0PrQb6i8aawmJ\nTLqebJjPt1Gb8tcSHQiJTLqGtB7yyQYlkUvHkF4GfdZOSOTSMaRm0GfthEQudZ+1UxKZdD60\nG/RZOyGRSeenUcxDX6zhtyU6ERJZdD60G/bJBiWRh5AgQNVPozgQEjlUH5KSyKFDSIejueEf\n2gmJHIQEAeo/tFMSGQgJAnQNaTXb77ezNIu9LCskRqZjSO0rrbavfzLA30ZxoiR61zGkefq3\n36TZ/t8QfxvFiZDoXcD09+bwesXDPWsnJDIICGlx+G19Qw5JSfSu86HdZp2a/bAP7YRE77qf\nbEjp5bBDGuDvkP0gJPrW+fR30/5Gl9m/oO35ZYkASqJnE7gguxcSvRMSBJjAZMOBkujXFCYb\n9kKib1OYbNgLib5NYbLhQEn0ahKTDXsh0bNJTDbshUTPJjHZsBcSPZvGZMNeSfRrGhdk90Ki\nX0KCAJ1ejuuLwlt1lZLokZAgwGQO7YREn6YTkpLoUdaQXl8W7VHgYnllxFVIjEzG34+0m519\n9OVBCCExMhlDWqbm36a9tV0fL+NGbtUNlERvYg7tXueL65/XpM3H7c1hQO+uJQIIid4EPUba\npefrn/d9bPy+JboTEr2JOtlww6Fd8T2SkuhNUEiry2G03h4jrbftrUKPkYREb8JONrxc/8T5\n2amJ2S54q24hJPoSFNJsdctnvi7b60jN4qXEdaS9kujNhCYb9kKiN0KCAF1C2i6b1CwvPtj5\nquyI0IGS6EeHkLbtC0OmZnvj55UeEToQEv3oENJzmu/2u/kNl2KPio8I7YVEXzqE1KTDUd32\nhitIp48vfUF2ryR60ukZsudvbvi80iNCB0KiFxlDskeiXhlDKj8idKAk+pAxpPIjQgdCog9Z\nX0Wo+IjQXkj0Yzovx3WiJHowrRGhAyHRgwm9itA7IdGDjCENYESoPQJVEvEyhlR8RKh9HJeS\nkIiXMaTiF2TfT9cLiXgZQ7oyItTbKcCPBU5vlUS4Ce2RhER/8j5GKjoiJCT6k/P0d+kRoXT6\nr5KIlvc6UtkRofezdkIi3rQmG95PYwiJaNMK6URJBJveiNCBkAg2rRGhEyERbEojQmeURKwJ\nXZA9JyRiDWdEKGKJmwmJWBPdIymJWBMaEfpCSISa0ojQOSERakojQl8oiUjTnGzYC4lYQoIA\nkw1JSUQSEgQQEgTIOtlw8+ub5AhJSQTKGNJKSFQr56Hdprn85ImAJe4hJOJkfYy0uTwYFLHE\nPZREmLwnG1Znc6s9LXEHIRFmumfthESgKYekJMIICQIICQJMOiQlEUVIEEBIEGDaISmJIEKC\nAEKCAEKCABMPSUnEEBIEEBIEmHpISiKEkPItRcWElG8pKjb5kJREBCEJiQBCEhIBhKQkAghJ\nSAQQkpAIICQlEUBIQiKAkIREACHtlUR3QtoLie6EtBcS3QnpQEl0JKQDIdGRkA6EREdCaimJ\nboTUEhLdCKklJLoR0pGS6ERIR0KiEyEdCYlOhPROSXQhpHdCogshvRMSXQjpREl0IKQTIdGB\nkE6ERAdC+qAkHiekD0LicUL6pCQeJqQzSuJRQjojJB4lpHNK4kFC+kJJPEZIXymJhwjpKyHx\nECF9oyQeIaTvlMQDhPSDkrifkH4QEvcT0k9K4m5C+oWSuJeQfqMk7iSk35Z/Kl0yYyOkn4u/\nrf6UpMQ9hPT74vZJ3EVIf6ytJO4hpL/WdsKBOwjpr7WFxB2E9MfiSUncIWtIry+LdLBYvva1\nRID2hF176q7kVjAuGUPazdKneS9LBEnvJ7+VxK0yhrRMzb9Ne2u7btKyjyWCCYlbZQypSZuP\n25vU9LFENCVxo4whfRkWuDw5MJSQlMSN7JEuUxI3yfsYab1tb43lMdJeSNwo5+nv+dlZu9mu\nlyXiKYlb5L2OtGyvIzWLlyFfR/pGSdzAZMNVSuI6IV2nJK4yInSdkLjKiNANlMQ1RoRuoSSu\ncEH2JkriMiNCNxESl9kj3UZJXGRE6EZK4hIjQrdSEhcYEbqVkLjAZMPNlMTfhhNSOtfPEh0p\niT8ZEbqDkviLEaE7CIm/GBG6h5L4gwuyd1ESvzMidB8l8St7pDspid8YEbqTkPiNEaF7KYlf\nGBG6m5L4aTiTDZmX6EBJ/CCk+wmJH/KHtJqltFj3ukTflMR32a8jvZ9xuHjSbughKYnvcoe0\nTMvdfr9dplUfS2SjJL7KHVKT2vPeuzTrY4lshMRXuUM6jQaNdUToREl8kTuk51NIYx0ROnna\nD/X5h5SQNaTFy2qd/r3d3C1HOyJ0kp6eru1XmZCsIX08jTylZrQjQu9Se3g3gg0li5zXkTab\n1WqxaE85LC92NIKfz3YL33ZKw99SsjDZ8Jj3LXwa/paShZAec9rCJ6fvOBDSg9Lpv1JiL6SH\nnV0VUxJCetzndSQ7JYQUQklTJ6QYdkoTJ6QoSpo0IYWxU5oyIQVS0nQJKZKd0mQJKZaUJkpI\n0ZQ0SUIKZ6c0RULqgZKmR0h9sFOaHCH1Q0kTI6Se2ClNi5B6816SFxuaBCH15+N1hqRUPyH1\n6enp44m01E1IvUqn47uym0HvhNSr9H7SoZpviD8IqVeHb+RpX9E3xB+E1K+2JK9+Vz8h9et4\n1s5FpeoJqW/H60hPWqqbkLLRUs2ElJOWqiWkzLRUJyHlp6UKCakILdVGSKVoqSpCKujpMyZP\nthg5IRX25MkWVRBSeaf90rS+68oIaQDSe0sT+7arIqQBOP7eP7OtYyakAfj8zX9O5I2VkIbg\n8wnpWhopIQ3Bl7N2T2IaISENw7frSGIaGyENlpjGREiD9i0m8w+DJaTB+4jJ/MOACWkU2pi8\n2OSACWk0np7MPwyXkEbjNP/gDMQQCWk0TndKEtMACWk8zh8jiWlghDQe38/aiWlAhDQmP68j\nPT39kpPLTfkJqQZfcnK5qQQh1eOYk99tVoSQapPed0/uw6yEVJuzJ2M4F5GPkGqTzt8+6SkT\nIVXnl8dIzu31TkjV+fOs3Zfdk3N7sYRUocv7mqezoNzRUYQ0TelrUHQlpGk6OyVxpScPpW4i\npGlK397+tYPyUOpGQpqoP+cfvgZlTOJGQpqoq7uaL0Fd/QeZ/AGgkCbrlp/9s3MSl05KOAAU\nEpecP5S6UJQDQCFx0W+JPH1P6ueZi+kREpdcPmj7VtSUH0kJictu+OFPP3dSv3+lfb2PpIRE\nd2cHgE9Pf0ZV9SMpIdHdH/uar03d/khqjEeAQiLCtZ/9Czuqn19qP8IjQCGRycce6elyVeM8\nAhQSufxayNPTt65uPgIc1gGgkMjllmO2H111+WI5CYl8bpxK+nz7d1dDOwAUEgNzIZGfXQ3m\nJ0VIDMxNB22/7a+KPtdXSAzOTcMUX9+2voeVsy0hMUo3Pkb6pa1++hISo9TtrF18X0JipHq4\njtQhLyHBZTdFJSQIICQIICQIICQIICQIICQIkDWk15dFOlgsX/taAorIGNJulj7Ne1kCCskY\n0jI1/zbtre26Scs+loBCMobUpM3H7U1q+lgCCskY0pfRqJ9zUuncg0tAIfZIECDvY6T1tr3l\nMRK1yXn6e3527Dbb9bIElJH3OtKyvY7ULF5cR6IuJhsggJAggJAggJAggJAggJAggJAggJAg\ngJAggJAggJAggJAggJAggJAggJAggJAggJAggJAgwEBDgpF54Kc8PpxRrG1964euLyTrW39o\nX2xEa1vf+kKyvvWHtr6QrG/9oX2xEa1tfesLyfrWH9r6QrK+9Yf2xUa0tvWtLyTrW39o6wvJ\n+tYf2hcb0drWt341IUE1hAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQBhAQB\nhAQBhAQBioW0bFKz3GVfdnX6hs/Wz7cpq9lvi2Zbf/ec0vNmX2z9g9dUbv3zV8iPXr9USPP2\nW5rlXnZz+kUDZ+vn25Rlu1KzK7V+0660+bZo1n+KXXP8Byix/uYspPD1C4X0mprNftOk17zL\nvq2Yvq+fb1M26Xl32Cc+F1p/eVh5mRb7QusfLI7/AIXu/8XpZvz6hUJapvXbf/+ll6yrrtL8\ntGP/XD/fpiyOax82ocj6Tdq9L19m/XaZ4z9AkfVXn2vEr18opEXa7r/8LyKLtNy/h3S2fvZN\nOWxCwfVTsy+2/vb0f7Ii66/S6nQzfv1CIaV0/iaXzfeFD29yb8ouzUuuv2x/mgqtP0/b4zpF\n1l+k9XNqlv2sP6mQfixcIqTV4VCi1Ppvh1Y9/SDd4iX92xcNqTXvZX0hZd6UbbMouP5q0bQP\nBoqs3x4+FQwpvXW837W7ZCHFLpw/pF0zL7r+fv/czw/SDWaHE/8FQzraHc50VxNSUziks/Xz\nbsp8Vnb9ww9SU2b95/b02HGdgt//90WD1i8U0vFUyTbzWbv9x/11tn7OTdnO5tuS67c+zxrm\nXT99qPH7LxTSS/t/p/XxkW9O7yGdrZ9xU9btA91i6x+vI20PhzYl1j8Pqej3v+hj/UIhFZps\n+AipyJX17UdHBScbdovDY6Rikw37gpMNy0Msu/YCbDWTDfvZx5nIvE6HwmfrZ9uU58//IxdZ\n/33W7vuief8p3v8BSqy/O37/y17WLxXSrh25zb/uKaSz9bNtytmhTZH12znn2er7onn/Kd7/\nAYqsv+vx+y8VElRFSBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBA\nSBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBASBBA\nSONw+EV3F36D/fvvAfzzz/TN3T0OQho4d/d4XAzpjg+mB+7u8RDSgLm7h2y9SO+/cPvz0G6Z\nXs7fcfSezXqe0nx9/jdk4u4esJfUOgTzEdIyzb+84+iYzer416vPvyEXd/eApfRvv//XJnEK\nqe3o/B2njzz8t0mbw1/PPv+GXNzdg3ce0rGj83ec30xp/ds7ycDdPWjb9cv8LKS326/f3nF0\neviUFpvN+d+Qi7t7yObHBz37U0ipOR63nb3j6P3mS3P4mO3Z35CJu3vAntNstd6ehfS6aR8d\nnb/j6OPmejnzGKkEd/eAtTFsv5xseEnN13ecfeSX20LKy909YIdHRJv5l5D2s8NlpLN3nD5y\n377vn7N2hbi7B2x5fCR0OMHwEdLbwd3u/B1Hx2z+nf2tkPJydw/Zc0rz13VanE82vBz++PmO\no/PJhtfzvyETd3cVzNqV5u6ugpBKc3dXwfORSnN3V0FIpbm7IYCQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIMB/RTt+x5lkIzsAAAAASUVORK5CYII="
+          },
+          "metadata": {
+            "image/png": {
+              "width": 420,
+              "height": 420
+            }
+          }
+        }
+      ],
+      "execution_count": 203,
+      "metadata": {
+        "collapsed": false,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-13T19:43:39.684Z",
+          "iopub.execute_input": "2021-12-13T19:43:39.718Z",
+          "iopub.status.idle": "2021-12-13T19:43:39.838Z",
+          "shell.execute_reply": "2021-12-13T19:43:39.885Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "42\n",
@@ -1508,6 +1665,51 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A=A0*exp(-l*t)\n",
+        "A0<-1000\n",
+        "T12<-0.8\n",
+        "l<-log(2)/T12\n",
+        "t<-1\n",
+        "# Aktiivisuus näytteen mittauksen jälkeen\n",
+        "A<-A0*exp(-l*t)\n",
+        "# Näytteen aktiivisuus\n",
+        "Am<-0.15\n",
+        "Vm<-0.002\n",
+        "V<-A/Am*Vm\n",
+        "cat(sprintf(\"Verimäärä on %.1f l.\\n\",V))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Verimäärä on 5.6 l.\n"
+          ]
+        }
+      ],
+      "execution_count": 207,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-13T19:56:07.371Z",
+          "iopub.execute_input": "2021-12-13T19:56:07.406Z",
+          "iopub.status.idle": "2021-12-13T19:56:07.587Z",
+          "shell.execute_reply": "2021-12-13T19:56:07.619Z"
         }
       }
     },
